linting, and more

--- a/src/pages/_app/_AppLogoLink.astro
+++ b/src/pages/_app/_AppLogoLink.astro
@@ -4,8 +4,14 @@ import AppLink from "./_AppLink.astro";
 import AppLogo from "./_AppLogo.astro";
 
 const sherpa = makeSherpa();
+
+interface Props {
+  class?: string;
+}
+
+const props = Astro.props;
 ---
 
-<AppLink href={sherpa.home({})}>
+<AppLink href={sherpa.home({})} class={props.class}>
   <AppLogo />
 </AppLink>
