--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -1,5 +1,5 @@
 ---
-import AppHeaderCommon from "../_app/_AppHeaderCommon.astro";
+import AppHeader from "../_app/_AppHeader.astro";
 import AppLink from "../_app/_AppLink.astro";
 import AppPage from "../_app/_AppPage.astro";
 import AppPageBody from "../_app/_AppPageBody.astro";
@@ -12,25 +12,22 @@ const sherpa = makeSherpa();
 ---
 
 <AppPage>
-    <AppHeaderCommon />
+  <AppHeader />
 
-    <AppPageBody
-        backgroundColor="bg-gray-100"
-        class="flex flex-col min-h-screen"
-    >
-        <AppHeroSection
-            title="My Career"
-            subtitle="When work is play, you'll never play another day in your life."
-        />
+  <AppPageBody backgroundColor="bg-gray-100" class="flex flex-col min-h-screen">
+    <AppHeroSection
+      title="My Career"
+      subtitle="When work is play, you'll never play another day in your life."
+    />
 
-        <section class="flex-row py-8 px-4">
-            <AppLink href={sherpa.work.resume({})} target="_blank">
-                <Card class="max-w-1/2">
-                    <h1>Resume</h1>
-                </Card>
-            </AppLink>
-        </section>
+    <section class="flex-row py-8 px-4">
+      <AppLink href={sherpa.work.resume({})} target="_blank">
+        <Card class="max-w-1/2">
+          <h1>Resume</h1>
+        </Card>
+      </AppLink>
+    </section>
 
-        <AppFooter />
-    </AppPageBody>
+    <AppFooter />
+  </AppPageBody>
 </AppPage>
