--- a/src/pages/test/index.astro
+++ b/src/pages/test/index.astro
@@ -1,7 +1,7 @@
 ---
 import AppPage from "../_app/_AppPage.astro";
 import AppHeader from "../_app/_AppHeader.astro";
-import { AllJsonPlaceholderQueries } from "./api/solidJsResources/_AllJsonPlaceholderQueries.tsx";
+import { AllSampleQueries } from "./api/solidJsResources/_AllSampleQueries.tsx";
 import RandomUser from "./api/astroFetchOnBuild/RandomUser.astro";
 import AppPageBody from "../_app/_AppPageBody.astro";
 ---
@@ -10,6 +10,6 @@ import AppPageBody from "../_app/_AppPageBody.astro";
     <AppHeader />
     <AppPageBody>
         <RandomUser />
-        <AllJsonPlaceholderQueries />
+        <AllSampleQueries />
     </AppPageBody>
 </AppPage>
