--- a/src/pages/test/index.astro
+++ b/src/pages/test/index.astro
@@ -1,15 +1,15 @@
 ---
 import AppPage from "../_app/_AppPage.astro";
 import AppHeader from "../_app/_AppHeader.astro";
-import AllSampleQueries from "./api/solidJsResources/_AllSampleQueries.astro";
-import RandomUser from "./api/astroFetchOnBuild/RandomUser.astro";
+// import AllSampleQueries from "./api/solidJsResources/_AllSampleQueries.astro";
+// import RandomUser from "./api/astroFetchOnBuild/RandomUser.astro";
 import AppPageBody from "../_app/_AppPageBody.astro";
 ---
 
 <AppPage>
     <AppHeader />
     <AppPageBody>
-        <RandomUser />
-        <AllSampleQueries />
+        <!-- <RandomUser />
+        <AllSampleQueries /> -->
     </AppPageBody>
 </AppPage>
