--- a/src/pages/test/api/solidJsResources/_AllSampleQueries.astro
+++ b/src/pages/test/api/solidJsResources/_AllSampleQueries.astro
@@ -1,10 +1,10 @@
 ---
-import { Albums } from "./_data/Albums";
-import { Comments } from "./_data/Comments";
-import { Photos } from "./_data/Photos";
-import { Posts } from "./_data/Posts";
-import { Todos } from "./_data/Todos";
-import { Users } from "./_data/Users";
+import { Albums } from "./_data/_Albums";
+import { Comments } from "./_data/_Comments";
+import { Photos } from "./_data/_Photos";
+import { Posts } from "./_data/_Posts";
+import { Todos } from "./_data/_Todos";
+import { Users } from "./_data/_Users";
 ---
 
 <div>
