underscore renaming and astro.config update

--- a/src/pages/_app/_AppNavMenu.astro
+++ b/src/pages/_app/_AppNavMenu.astro
@@ -4,7 +4,7 @@
  *
  * Navigation component with customizable links.
  */
-import { makeSherpa } from "../_sherpa/Sherpa";
+import { makeSherpa } from "../_sherpa/_Sherpa";
 import AppLink from "./_AppLink.astro";
 
 const sherpa = makeSherpa();
