--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import AppPage from "./_app/_AppPage.astro";
 import AppPageBody from "./_app/_AppPageBody.astro";
 import AppLink from "./_app/_AppLink.astro";
-import { makeSherpa } from "./_sherpa/Sherpa";
+import { makeSherpa } from "./_sherpa/_Sherpa";
 import AppFooter from "./_app/_AppFooter.astro";
 import AppHeroSection from "./_app/_AppHeroSection.astro";
 
