--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -5,7 +5,7 @@ import AppPage from "../_app/_AppPage.astro";
 import AppPageBody from "../_app/_AppPageBody.astro";
 import AppFooter from "../_app/_AppFooter.astro";
 import AppHeroSection from "../_app/_AppHeroSection.astro";
-import { makeSherpa } from "../_sherpa/Sherpa";
+import { makeSherpa } from "../_sherpa/_Sherpa";
 import Card from "../../lib/ui/Card.astro";
 
 const sherpa = makeSherpa();
