--- a/src/pages/_app/_AppLogoLink.astro
+++ b/src/pages/_app/_AppLogoLink.astro
@@ -1,5 +1,5 @@
 ---
-import { makeSherpa } from "../_sherpa/Sherpa";
+import { makeSherpa } from "../_sherpa/_Sherpa";
 import AppLink from "./_AppLink.astro";
 import AppLogo from "./_AppLogo.astro";
 
