--- a/src/pages/play/video-games/index.astro
+++ b/src/pages/play/video-games/index.astro
@@ -6,7 +6,7 @@ import AppHeader from "../../_app/_AppHeader.astro";
 import AppHeroSection from "../../_app/_AppHeroSection.astro";
 import AppPage from "../../_app/_AppPage.astro";
 import AppPageBody from "../../_app/_AppPageBody.astro";
-import { makeSherpa } from "../../_sherpa/Sherpa";
+import { makeSherpa } from "../../_sherpa/_Sherpa";
 
 const sherpa = makeSherpa();
 ---
